[gd_scene format=3 uid="uid://e30ae74tpux4"]

[ext_resource type="Script" uid="uid://dicpalxrvc3xq" path="res://Scripts/UI/reward_popup.gd" id="1_script"]
[ext_resource type="FontFile" uid="uid://cxqub0sfewm4v" path="res://addons/font_auto_size_labels/demo/Anta-Regular.ttf" id="2_font"]
[ext_resource type="Texture2D" uid="uid://c0oyrh5irryw2" path="res://Assets/Sprites/4.png" id="3_coin"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(0.12, 0.12, 0.14, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.4, 0.4, 0.45, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button"]
bg_color = Color(0.2509804, 0.5019608, 0.65882355, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button_pressed"]
bg_color = Color(0.2, 0.4, 0.3, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button_hover"]
bg_color = Color(0.3, 0.6, 0.4, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="RewardPopup" type="Control" unique_id=248112554]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="Background" type="ColorRect" parent="." unique_id=693152111]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.6)

[node name="PopupPanel" type="Panel" parent="." unique_id=1743329583]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -180.0
offset_right = 150.0
offset_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="VBoxContainer" type="VBoxContainer" parent="PopupPanel" unique_id=1804177053]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -70.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15
alignment = 1

[node name="IconTexture" type="TextureRect" parent="PopupPanel/VBoxContainer" unique_id=619703433]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("3_coin")
expand_mode = 1
stretch_mode = 5

[node name="NameLabel" type="Label" parent="PopupPanel/VBoxContainer" unique_id=220584001]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 28
text = "Coin"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DescriptionLabel" type="Label" parent="PopupPanel/VBoxContainer" unique_id=703270384]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 16
text = "Currency used for upgrades and trade."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="CloseButton" type="Button" parent="PopupPanel" unique_id=179036211]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_top = -55.0
offset_right = -15.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_button")
theme_override_styles/pressed = SubResource("StyleBoxFlat_button_pressed")
theme_override_styles/hover = SubResource("StyleBoxFlat_button_hover")
text = "Collect"
